--- a/client/src/css/Prodlists/RelatedList.css
+++ b/client/src/css/Prodlists/RelatedList.css
@@ -9,6 +9,11 @@
   flex-direction: row;
 }
 
+.related-list-container button{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .related-list-card-container{
   display: inline-flex;
   flex-direction: row
