--- a/client/src/css/Reviews/styles.css
+++ b/client/src/css/Reviews/styles.css
@@ -14,3 +14,15 @@
   height: 20px;
   background-color: green;
 }
+
+.characteristicStyle {
+  height: 20px;
+  width: 300px;
+  border: 1px solid black;
+  background-color: gray;
+}
+
+.characteristicFillStyle {
+  height: 20px;
+  background-color: green;
+}
