--- a/client/src/css/Prodlists/ComparisonModal.css
+++ b/client/src/css/Prodlists/ComparisonModal.css
@@ -1,14 +1,11 @@
 .comparison-modal{
   position: fixed;
-  left:0;
-  top: 0;
-  right:0;
-  bottom:0;
-  background-color: rgb(0, 0, 0, 0.5);
 
   display:flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid chartreuse;
+  z-index: 1;
 }
 
 .comparison-modal-content{
