--- a/client/src/css/Prodlists/OutfitList.css
+++ b/client/src/css/Prodlists/OutfitList.css
@@ -7,6 +7,8 @@
   border: 1px solid rgb(111, 55, 55);
   display: inline-flex;
   flex-direction: row;
+  width: 1000px;
+  height: 361px
 }
 
 .outfit-list-card-container{
