--- a/client/src/css/Prodlists/RelatedList.css
+++ b/client/src/css/Prodlists/RelatedList.css
@@ -1,12 +1,16 @@
 .related-list{
   border: 1px solid red;
   text-align: center;
+
 }
 
 .related-list-container{
   border: 1px solid rgb(111, 55, 55);
   display: inline-flex;
   flex-direction: row;
+  min-width: 1000px;
+  height: 361px;
+  text-align: center;
 }
 
 .related-list-container button{
@@ -17,4 +21,12 @@
 .related-list-card-container{
   display: inline-flex;
   flex-direction: row
+}
+
+.related-list-container-lscroll{
+
+}
+
+.related-list-container-rscroll{
+
 }
