--- a/client/src/css/Prodlists/RelatedList.css
+++ b/client/src/css/Prodlists/RelatedList.css
@@ -1,7 +1,6 @@
 .related-list{
   border: 1px solid red;
   text-align: center;
-
 }
 
 .related-list-container{
@@ -10,23 +9,54 @@
   flex-direction: row;
   min-width: 1000px;
   height: 361px;
-  text-align: center;
+  justify-content: space-between;
 }
 
-.related-list-container button{
+.related-list-container-scroll{
+  position: relative;
+  top: calc(50% - 15px);
   margin-left: 10px;
   margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  border: 0;
+  background-color: transparent;
+  color:black;;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.related-list-container-scroll:hover{
+  background-color: rgba(239, 239, 239, 0.5) ;
+}
+
+
+.related-list-container-scroll:disabled{
+  opacity: 0;
+  cursor:default;
 }
 
 .related-list-card-container{
+  min-width: 888px;
   display: inline-flex;
-  flex-direction: row
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.related-list-container-lscroll{
 
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
 }
 
-.related-list-container-rscroll{
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
 
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
