--- a/client/src/css/Prodlists/AddOutfitCard.css
+++ b/client/src/css/Prodlists/AddOutfitCard.css
@@ -3,7 +3,7 @@
   margin-right: 10px;
   width:200px;
   height:359px;
-  border: 1px solid blue;
+  border: 2px dashed rgb(0, 0, 0);
   text-align: center;
   cursor: pointer;
 }
@@ -16,14 +16,14 @@
 }
 
 .add-outfit-card-text{
-  font-size: 12px;
-  color: grey
+  font-size: 16px;
+  color: rgb(47, 47, 47)
 }
 
 .add-outfit-card-symbol{
   font-size: 40px;
   font-weight: bold;
-  color: grey
+  color: rgb(47, 47, 47)
 }
 
 .add-outfit-card:hover{
@@ -32,12 +32,12 @@
 
 @keyframes pulse {
   0% {
-    box-shadow: 0 0 2px 0 rgba(44, 52, 204, 0.4);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.4);
   }
   20% {
-      box-shadow: 0 0 10px 10px rgba(42, 83, 158, 0);
+      box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0);
   }
   100% {
-      box-shadow: 0 0 2px 0 rgba(44, 71, 204, 0);
+      box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0);
   }
 }
