--- a/client/src/css/Prodlists/Card.css
+++ b/client/src/css/Prodlists/Card.css
@@ -3,7 +3,7 @@
   margin-right: 10px;
   min-width:200px;
   min-height: 361px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 
@@ -17,6 +17,7 @@
 .card-image{
   width:200px;
   height:200px;
+  box-shadow: 2px 2px 2px rgb(122, 122, 122);
 }
 
 .card-image-button{
@@ -64,7 +65,7 @@
 .card-button-compare{
   position: absolute;
   background-color: rgb(75, 75, 75);
-  top: -5px;
+  top: -3px;
   right:0%;
   border: none;
   padding: 5px 8px 5px 10px;
@@ -73,18 +74,57 @@
   display: inline-block;
   margin-left: 0;
   cursor: pointer;
-  border-radius: 0px 0px 10px 10px;
+  border-radius: 0px 10px 10px 10px;
+  box-shadow: 2px 2px 2px rgb(122, 122, 122);
+  animation-name: popInFromTop;
+  animation-duration: .5s;
+  animation-fill-mode: both;
 }
 
 .card-button-compare:hover{
   background-color: #434343;
 }
 
-.card-description{
+.card-description-container{
   position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
+.card-description-category{
+  font-size: 12px;
+  color:rgb(97, 97, 97);
+  margin: 8px 0 10px 0
+}
 
+.card-description-name{
+  font-size: 16px;
+  margin: 0 0 6px 0;
+}
+
+.card-description-price{
+  font-size: 16px;
+  font-weight:bold;
+  margin: 0 0 8px 0;
+}
+
+.card-rating-stars{
+  color:rgb(253, 0, 0)
+}
+
+.card-rating-stats{
+  margin: 0;
+  font-size: 12px;
+  color:rgb(113, 113, 113)
+}
+
+.card-rating-stats-num{
+  color:rgb(55, 55, 55)
+}
+
+.card-rating-stats-count{
+  color:rgb(55, 55, 55)
+}
 
 .fadeInFromLeft{
   animation-name: fadeInFromLeft;
@@ -118,5 +158,14 @@
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes popInFromTop {
+  0% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
