--- a/client/src/css/Prodlists/RelatedList.css
+++ b/client/src/css/Prodlists/RelatedList.css
@@ -1,10 +1,10 @@
 .related-list{
-  border: 1px solid red;
+  /* border: 1px solid red; */
   text-align: center;
 }
 
 .related-list-container{
-  border: 1px solid rgb(111, 55, 55);
+  /* border: 1px solid rgb(111, 55, 55); */
   display: inline-flex;
   flex-direction: row;
   min-width: 1000px;
