--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -1,17 +1,32 @@
+.reviews-section {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  margin: auto;
+}
+
 .left-reviews {
-  float: left;
   width: 33.33%;
-  position: sticky;
-  top: 0;
-  background-color: white;
+  position: static;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  height:750px;
+  margin-right:30px;
 }
 
 .right-reviews {
-  float: left;
-  width: 66.67%;
-  position: static;
+  position: relative;
+  display:flex;
+  flex-direction: column;
+  height: 750px;
+  overflow: scroll;
 }
 
-.sort {
-  float: right;
+.right-reviews-header{
+  position: relative;
+  width: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
