--- a/client/src/css/Reviews/styles.css
+++ b/client/src/css/Reviews/styles.css
@@ -1,27 +1,3 @@
-.progressStyle {
-  height: 20px;
-  width: 300px;
-  border: 1px solid black;
-  background-color: gray;
-}
-
-.progressFillStyle {
-  height: 20px;
-  background-color: green;
-}
-
-.characteristicStyle {
-  height: 20px;
-  width: 300px;
-  border: 1px solid black;
-  background-color: gray;
-}
-
-.characteristicFillStyle {
-  height: 20px;
-  background-color: green;
-}
-
 .modalWriteReview {
   position: fixed;
   left: 50%;
@@ -33,6 +9,8 @@
   align-items: center;
   justify-content: center;
   z-Index: 1000;
+  padding: 1em;
+  border-radius: 1em;
 }
 
 .modalWriteReviewBackground {
@@ -76,4 +54,8 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.write-modal-body {
+  height: 100px
 }
