Reworked style files, did more editing to breakdown section, starting write review modal rework and styling.

--- a/client/src/css/Reviews/breakdownStyles.css
+++ b/client/src/css/Reviews/breakdownStyles.css
@@ -1,3 +1,9 @@
+.rating-breakdown-style {
+  margin-bottom: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 .progress-style {
   height: 20px;
   width: 300px;
