--- a/client/src/css/Reviews/modalStyles.css
+++ b/client/src/css/Reviews/modalStyles.css
@@ -3,7 +3,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: #929292;
   display: flex;
   flex-direction: column;
   align-items: center;
