--- a/client/src/css/Reviews/modalStyles.css
+++ b/client/src/css/Reviews/modalStyles.css
@@ -1,4 +1,4 @@
-.modalWriteReview {
+.write-review {
   position: fixed;
   left: 50%;
   top: 50%;
@@ -13,7 +13,7 @@
   border-radius: 1em;
 }
 
-.modalWriteReviewBackground {
+.write-review-background {
   position: fixed;
   top: 0;
   left: 0;
@@ -24,7 +24,7 @@
   z-index: 1000;
 }
 
-.modalPhoto {
+.modal-photo {
   z-index: 1000;
   position: fixed;
   left: 50%;
@@ -34,7 +34,7 @@
   width: auto;
 }
 
-.modalPhotoBackground {
+.modal-photo-background {
   position: fixed;
   top: 0;
   left: 0;
@@ -45,17 +45,47 @@
   z-index: 1000;
 }
 
-.regPhoto {
+.reg-photo {
   max-height: 10rem;
   width: auto;
 }
 
-.closeModalButton {
+.write-review-photo {
+  max-height: 5rem;
+  max-width: 112px;
+}
+
+.close-modal-btn {
   position: absolute;
+  border-radius: 5px;
+  height: 2em;
+  width: 2em;
   top: 0;
   right: 0;
 }
 
 .write-modal-body {
-  height: 100px
+  display: flex;
+  align-items: start;
+}
+
+.write-review-header {
+  text-align: center;
+}
+
+.char-btn {
+  margin-left: 20px;
+  margin-right: 2px;
+}
+
+.char-btn-labels {
+  width: 215px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.min-char {
+  margin-left: 95px;
 }
