--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -7,26 +7,31 @@
 
 .left-reviews {
   width: 33.33%;
-  position: static;
+  position: relative;
   display: flex;
   flex-direction: column;
   background-color: transparent;
   height: 750px;
-  margin-right:30px;
+  margin-right: 2%;
 }
 
 .right-reviews {
   position: relative;
-  display:flex;
+  display: flex;
   flex-direction: column;
+  width: 66.67%;
   height: 750px;
-  overflow: scroll;
+
 }
 
 .right-reviews-header{
   position: relative;
-  width: 100%;
+  width: 99%;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.right-reviews-cards {
+  overflow: scroll;
 }
