--- a/client/src/css/Overview/styles.css
+++ b/client/src/css/Overview/styles.css
@@ -6,7 +6,15 @@ html {
   margin:0;
   padding:0;
 }
-
+.top{
+  width: 100vw;
+  padding: 1rem;
+  background-color: black;
+}
+.top .logo{
+  font-size: 1.4rem;
+  color: #E0DBDB;
+}
 .product-main{
   width: 100%;
   margin: 0 auto;
@@ -128,6 +136,9 @@ html {
   width:100%;
   height: 80vh;
   object-fit:fill;
+}
+.description-img .primary-img img:hover{
+  cursor: zoom-in;
 }
 .description-img .img-list{
   display: flex;
@@ -261,7 +272,7 @@ height: 80%;
 .item-description-size-btn {
   width: 100%;
   height: 100%;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   text-align: center;
   border: 1px solid gray;
   opacity: 80%;
@@ -405,4 +416,7 @@ button .sm #next{
 .share-link{
   display: inline-block;
   margin-right: 0.4rem;
+}
+.fa-facebook{
+  width: 20%;
 }
