--- a/client/src/css/Questions/styles.css
+++ b/client/src/css/Questions/styles.css
@@ -1,21 +1,20 @@
 .questions {
   text-align: center;
-  border: 2px double;
+  border: 2px thin;
   border-radius: 25px;
-  -webkit-box-shadow: 5px 5px 25px 5px #000000;
-  box-shadow: 5px 5px 25px 5px #000000;
-  padding: 10%;
+  box-shadow: 0 0.0625rem 0.125rem 0 #a9a9a9;
+  padding: 4%;
   height: 500px;
   overflow: scroll;
-}
-
-.question-search {
-  float: left;
-  padding-right: 100%;
+  justify-content: center;
 }
 
 .question {
   text-align: left;
+  border: 0.0625rem solid #a9a9a9;
+  border-top: none;
+  box-shadow: 0 0.0625rem 0.125rem 0 #e8e7e4;
+  margin-bottom: 16px;
 }
 
 #more-questions {
@@ -39,6 +38,7 @@
   line-height: 1;
   margin-top: 1.5rem;
 }
+
 #answerHelpful {
   background-color: transparent;
   text-decoration: underline;
@@ -46,7 +46,6 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
   margin-right: 3px;
 }
 
@@ -57,8 +56,8 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
 }
+
 #questionHelpful {
   background-color: transparent;
   text-decoration: underline;
@@ -66,7 +65,6 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
   margin-right: 3px;
 }
 
@@ -77,7 +75,6 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
 }
 
 #add-answer {
@@ -87,7 +84,6 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
   text-align:left;
 }
 
@@ -108,7 +104,6 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   line-height: 1;
-  margin-top: 1.5rem;
   margin-right: 10px;
 }
 
@@ -122,6 +117,7 @@
   margin-top: 1.5rem;
   margin-right: 10px;
 }
+
 .questions-buttons {
   padding:5px 2px;
   text-align:right;
@@ -130,18 +126,44 @@
   right:0;
 }
 
+.question-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.answer-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.question-title {
+  text-align: left;
+  position:relative;
+}
+
+.answer-title {
+  text-align: left;
+  position:relative;
+}
+
 .question-helpful-report {
   padding:5px 2px;
-  text-align:right;
-  top:0;
+  text-align: right;
   position:relative;
-  right:0;
+  margin-right:10px;
 }
 
 .answer-helpful-report {
   padding:5px 2px;
-  text-align:right;
-  top:0;
+  text-align: right;
   position:relative;
-  right:0;
+  margin-right:10px;
+}
+
+.question-search {
+  padding: 1px;
+  outline: 0;
+  width: 200px;
+  float: left;
+  padding-right: 100%;
 }
