--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,13 @@
+:root{
+  --primaryfont: "Source Serif Pro", serif;
+  --secondaryfont: "Source Serif 4", monospace;
+  --primarycolor: #F1F1F1;
+  --secondarycolor: #BFBFBF;
+}
+
+
 body{
-  background-color: #929292;
+  /* background-color: #000000; */
+
+
 }
