--- a/client/src/css/Overview/styles.css
+++ b/client/src/css/Overview/styles.css
@@ -6,14 +6,20 @@ html {
   margin:0;
   padding:0;
 }
+body{
+  background-color: rgba(16,15,15,1);
+  font-family: var(--primaryfont);
+  font-weight: 300;
+  color: var(--primarycolor);
+}
 .top{
   width: 100vw;
   padding: 1rem;
-  background-color: black;
+  background-color: #000000;
 }
 .top .logo{
-  font-size: 1.4rem;
-  color: #E0DBDB;
+  font-size: 1.8rem;
+  color: var(--secondarycolor)
 }
 .product-main{
   width: 100%;
@@ -41,6 +47,7 @@ html {
   height: 100%;
   justify-content: center;
   align-items: center;
+
 }
 .overview .description .description-img{
   grid-area: img;
@@ -59,7 +66,8 @@ html {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  font-size: 1.8rem;
 }
 
 .overview .description .item-description .item-description-heading{
@@ -70,21 +78,20 @@ html {
 }
 .item-description-heading .title{
   margin-top: 0.4rem;
-  font-size: 1.3rem;
-  font-weight: 300;
+  font-size: 2rem;
+  font-weight: 400;
   margin-bottom: 1.8vh;
 }
 .overview .description .item-description .price{
   display: flex;
-  font-size: 1.1rem;
+  font-size: 0.8em;
   margin-bottom: 1.8vh;
 }
 .item-description .price .original-price{
   margin-right: 0.4rem;
-
 }
 .item-description .price .sale-price {
-  color: red;
+  color: var(--primarycolor);
 }
 
 .description-portal {
@@ -111,8 +118,10 @@ html {
   top: 0;
   right: 0;
   z-index: 2;
-  padding: 0.8rem;
+  padding: 2rem;
   opacity: 60%;
+  font-size: 1rem;
+  background-color: var(--secondarycolor);
 }
 .modal-bg{
   position: absolute;
@@ -158,7 +167,7 @@ height: 80%;
 .img-list .img-ind img {
   width: 100%;
   height: 100%;
-  border-radius: 10%;
+  border-radius: 0.2rem;
 }
 .description-img .photo-carousel{
   position: relative;
@@ -167,8 +176,8 @@ height: 80%;
 }
 .description-carousel{
 
-  background:mintcream;
-  border-radius: .25rem;
+  background:var(--secondarycolor);
+  border-radius: .2rem;
   font-size: 0.8rem;
   padding: .2rem;
   opacity: 60%;
@@ -207,7 +216,7 @@ height: 80%;
 
 .img-list .selected {
   border: 1px solid black;
-  border-radius: 10%;
+  border-radius: .2rem;
 }
 
 
@@ -233,12 +242,16 @@ height: 80%;
 }
 .item-description-styles .style-title{
   display: flex;
-  font-size: 1.3rem;
-  margin-bottom: 0.6rem;
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
 }
 .item-description-styles .style-title .style-title-current{
   margin-left: 0.4rem;
-  font-weight: 100;
+  font-size: 1.4rem;
+  font-weight: 300;
+  padding-top: 0.23rem;
+  color: var(--secondarycolor);
 }
 .description-style img:hover {
   cursor: pointer;
@@ -246,13 +259,13 @@ height: 80%;
 }
 .item-description-size{
   padding: 0;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   margin-bottom: 1rem;
 }
 .item-description-size-title{
   margin-top: 0.4rem;
-  font-size: 1.4rem;
-  font-weight: 300;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 .item-description-size-list{
   list-style: none;
@@ -261,34 +274,51 @@ height: 80%;
   gap: .8vw;
   justify-content: flex-start;
   margin-top: 0.3rem;
-  padding: 0;
+  padding: 0.2rem;
   width: 90%;
 }
 .item-description-size-ind{
-  width: 4rem;
-  height: 2rem;
-  border-radius: 10%;
+  width: 3em;
+  height: 1.5em;
+  border: 1px solid var(--secondarycolor);
+  border-radius: .2rem;
+  background-color: var(--primarycolor);
 }
 .item-description-size-btn {
   width: 100%;
   height: 100%;
-  /* font-size: 1rem; */
+  font-size: 1.2rem;
   text-align: center;
-  border: 1px solid gray;
+  border: 1px solid var(--primarycolor);
+  border-radius: .2rem;
   opacity: 80%;
-  padding: 0.2rem
+  padding: 0.2rem;
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: var(--primaryfont);
+  background-color: var(--primarycolor);
 }
 .item-description-size-btn:hover{
-  background-color:#E0DBDB;
+  background-color:var(--secondarycolor);
   cursor: pointer;
 }
 #toggle-on{
   opacity: 100%;
-  border: 1px solid black;
+  border: 1px solid var(--primarycolor);
+
 }
 #toggle-on-size{
-  border: 1px solid black;
+  border: 1px solid var(--primarycolor);
+  border-radius: .2rem;
+  background-color: var(--secondarycolor);
+  height: 100%;
+  width: 100%;
+  font-size: 0.65em;
+  font-weight: 400;
+  color: #000000;
+
 }
+
 
 button .sm #prev{
   padding: 0;
@@ -304,15 +334,19 @@ button .sm #next{
   text-decoration: line-through;
 }
 .size-drop{
-  width: 3.2rem;
-  height: 1.8rem;
+  width: 5rem;
+  height: 2.3rem;
   margin-top: 1.4vh;
+  font-size: 1.3rem;
+  background-color: var(--primarycolor);
+  font-family: var(--secondaryfont);
 }
+
 
 .item-description-ratings{
   font-size: 1rem;
   margin-top: 0.2rem;
-  margin-bottom: 1.8vh;
+  margin-bottom: 2vh;
 }
 .item-description-ratings div {
   display: flex;
@@ -326,13 +360,14 @@ button .sm #next{
   justify-content: flex-start;
 }
 .item-description-ratings svg{
-  height: 0.9rem;
-  width: 0.9rem;
+  height: 1.2rem;
+  width: 1.2rem;
+
 }
 .line-break{
   width: 100%;
   display: inline-block;
-  background-color: black;
+  background-color: var(--primarycolor);
   padding: 0.01rem;
 }
 .half{
@@ -345,41 +380,79 @@ button .sm #next{
   font-weight: 300;
 }
 .item-description-quantity{
-  font-size: 1.4rem;
   display: flex;
   flex-direction: column;
   margin-bottom: 4vh;
+  font-size: 1.1rem;
+  font-weight: 400;
+
+}
+.item-description-quantity label{
+  font-weight: 400;
+  font-size: 1.6rem;
+
+}
+.item-description-quantity #size{
+  border: 1px solid var(--secondarycolor);
+  border-radius: .2rem;
 }
 .size-alert{
   margin-top: 0.4rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+  font-family: var(--primaryfont);
 }
 .item-description-checkout{
-  height: 2.5rem;
+  height: 1.5em;
   width: 90%;
   margin-bottom: 1vh;
+  border: 1px solid var(--primarycolor);
+  border-radius: .2rem;
 }
 #checkout{
   height: 100%;
   width: 100%;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #000000;
+  background-color: var(--primarycolor);
+  font-family: var(--primaryfont);
+  border: 1px solid var(--primarycolor)
+}
+#checkout:hover {
+  background-color: var(--secondarycolor);
+}
+#checkout-click{
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #000000;
+  background-color: var(--secondarycolor);
+  border: 1px solid var(--primarycolor);
+  border-radius: .2rem;
+  font-family: var(--primaryfont);
 }
 .additional-info{
-  width: 80vw;
-  margin: 0 auto;
-  font-size: 1.2rem;
+  width: 100%;
+  margin-top: 1rem;
+  font-size: 1em;
+  display: flex;
+  flex-direction: column;
+
 }
 .add-description-overview{
-  margin-left: 40vw;
+
   font-size: 1rem;
-  margin-bottom: 1.5vh;
+  margin-top: 0.2vh;
 }
 .share-bar-overview{
-  margin-left: 40vw;
+
   font-size: 1rem;
 }
-.add-div{
+/* .add-div{
   margin-left: 2rem;
-}
+} */
 .add-title{
 
 }
@@ -387,24 +460,33 @@ button .sm #next{
 
 }
 .add-extend{
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-top: 1vh;
+  margin-bottom: 1vh;
+
 }
 .add-slogan{
-  font-weight: 800;
+  font-weight: 400;
+  margin-bottom: 0.3rem;
+  font-size: 1.5rem;
 }
 .add-detail{
-  font-size: 0.7rem;
+  font-size: 1.2rem;
+  margin-bottom: 0.6rem;
+  color: var(--secondarycolor);
 }
 .add-features{
-  font-size: 0.7rem;
+  font-size: 1.2rem;
   display: flex;
+  row-gap: 0.5rem;
+  color: var(--secondarycolor);
 }
 .add-feature{
   margin-right: 0.4rem;
 }
 .add-value{
-  font-size: 0.7rem;
+  font-size: 1.2rem;
+
 }
 .additional-info .share-bar-overview .share{
   margin-left: 2rem;
@@ -415,7 +497,7 @@ button .sm #next{
 }
 .share-link{
   display: inline-block;
-  margin-right: 0.6rem;
+  margin-right: 0.8rem;
 }
 .icons{
   display: flex;
@@ -424,7 +506,8 @@ button .sm #next{
 }
 .rating-link{
   text-decoration: none;
-  color: black;
+  color: var(--secondarycolor);
+  font-weight: 300;
 }
 .rating-link:hover{
   color: blueviolet;
