--- a/client/src/css/Reviews/tileStyles.css
+++ b/client/src/css/Reviews/tileStyles.css
@@ -1,8 +1,34 @@
 .review-tile {
   border: 1px solid black;
   border-radius: 5px;
-  width: 99%;
+  width: 98%;
   background-color: gray;
+  margin-bottom: 10px;
+  scroll-snap-align: start;
+  display:flex;
+  flex-direction: column;
+}
+
+.review-tile-header{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between
+}
+
+.review-tile-user{
+  margin: 5px 0 0 0;
+  display:flex;
+  flex-direction: row;
+  align-items: center
+}
+
+.review-tile-user p{
+  margin-left: 5px
+}
+
+.review-tile-date {
+  margin-right: 10px;
 }
 
 .review-tile-body {
@@ -10,7 +36,16 @@
   flex-direction: column;
   justify-content: space-evenly;
   margin-left: 1%;
-  margin-top: 1%;
+}
+
+.review-tile-title{
+  display:flex;
+  flex-direction: row;
+  align-items: center
+}
+
+.review-tile-title h3{
+  margin-left: 10px
 }
 
 .review-tile-footer {
@@ -24,10 +59,32 @@
   margin-top: 1%;
 }
 
-.date {
-  position: relative;
-  float: right;
-  top: 0;
-  right: 1%;
-  margin-top: 1%;
+
+
+.review-tile-photos-container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.load-more-questions-button{
+  border: 1px solid black;
+  background: transparent;
+  font-size: 16px;
+  height: 32px;
+}
+
+.load-more-questions-button:hover{
+  background: grey;
+}
+
+.load-more-questions-button:disabled:after{
+  content: 'No More Questions';
+}
+
+.load-more-questions-button span {
+  display: none;
+}
+.load-more-questions-button:after {
+  content: 'Load More Questions';
 }
