--- a/client/src/css/Overview/styles.css
+++ b/client/src/css/Overview/styles.css
@@ -1,27 +1,11 @@
-
-html {
-  box-sizing: border-box;
-}
-*{
-  margin:0;
-  padding:0;
-}
-body{
-  background-color: rgba(16,15,15,1);
-  font-family: var(--primaryfont);
-  font-weight: 300;
-  color: var(--primarycolor);
-}
-
 .top{
   width: 100vw;
-  padding: 1rem;
-  background-color: #000000;
+  background-color: var(--darkaccentcolor);
 }
 
 .top .logo{
   font-size: 1.8rem;
-  color: var(--secondarycolor)
+  color: var(--lightaccent)
 }
 .product-main{
   width: 100%;
@@ -29,7 +13,6 @@ body{
 
 }
 .overview .description {
-
   display: grid;
   width: 80vw;
   margin: 0 auto;
