--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -21,7 +21,7 @@
 }
 
 .left-reviews {
-  width: 33.33%;
+  width: 300px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -34,7 +34,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 66.67%;
+  width: 700px;
   height: 750px;
   margin-bottom: 10px;
 }
