--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -4,8 +4,8 @@
   --primarycolor: #CFDBD5;
   --secondarycolor: #242423;
   --darkaccentcolor: #242423;
-  --lightaccent: #E8EDDF;
-  --highlightaccent: #F5CB5C;
+  --lightaccentcolor: #E8EDDF;
+  --highlightaccentcolor: #F5CB5C;
 }
 
 
