Various style changes.

--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -41,24 +41,27 @@
 
 .right-reviews-header{
   position: relative;
-  width: 100%;
+  width: 97.73%;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
   border:1px solid black;
   height: 32px;
-  align-items: center
+  align-items: center;
+  padding: 1%;
 }
 
 .right-reviews-cards {
   overflow-y:scroll; /* Hide vertical scrollbar */
   overflow-x: hidden; /* Hide horizontal scrollbar */
   scroll-snap-type: y mandatory;
+  width: 100%;
+  padding-top: 1%;
   display:flex;
   flex-direction: column;
   align-items: center;
   height: 700px;
-  background-color:rgb(63, 63, 63)
+  background-color: var(--secondarycolor)
 }
 
 .right-reviews-cards::-webkit-scrollbar {
