--- a/client/src/css/Reviews/tileStyles.css
+++ b/client/src/css/Reviews/tileStyles.css
@@ -2,7 +2,7 @@
   border: 1px solid black;
   border-radius: 5px;
   width: 98%;
-  background-color: gray;
+  background-color: var(--primarycolor);
   margin-bottom: 10px;
   scroll-snap-align: start;
   display:flex;
@@ -36,6 +36,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   margin-left: 1%;
+  margin-right: 1%;
 }
 
 .review-tile-title{
@@ -59,32 +60,30 @@
   margin-top: 1%;
 }
 
-
-
-.review-tile-photos-container{
+.review-tile-photos-container {
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
-.load-more-questions-button{
+.load-more-reviews-button {
   border: 1px solid black;
   background: transparent;
   font-size: 16px;
   height: 32px;
 }
 
-.load-more-questions-button:hover{
+.load-more-reviews-button:hover {
   background: grey;
 }
 
-.load-more-questions-button:disabled:after{
-  content: 'No More Questions';
+.load-more-reviews-button:disabled:after {
+  content: 'No More Reviews';
 }
 
-.load-more-questions-button span {
+.load-more-reviews-button span {
   display: none;
 }
-.load-more-questions-button:after {
-  content: 'Load More Questions';
+.load-more-reviews-button:after {
+  content: 'Load More Reviews';
 }
