--- a/client/src/css/Reviews/breakdownStyles.css
+++ b/client/src/css/Reviews/breakdownStyles.css
@@ -25,7 +25,6 @@
   flex-direction: column;
 }
 
-
 .rating-breakdown-header{
   margin-bottom: 10px;
 }
@@ -51,11 +50,9 @@
 }
 
 .progress-bar-style:hover {
-  background-color: gold;
+  background-color: var(--highlightaccentcolor);
   transform: scale(1.01);
 }
-
-
 
 .progress-fill-style {
   height: 20px;
