--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -10,6 +10,7 @@
     width: 375px;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .left-reviews {
     width: 100%;
