Made better responsiveness.

--- a/client/src/css/Reviews/breakdownStyles.css
+++ b/client/src/css/Reviews/breakdownStyles.css
@@ -123,7 +123,8 @@
 
 .left-reviews-skull-motif{
   margin-left: 22px;
-  position: static;
+  position: relative;
+  transform: scale(.8);
 }
 
 .remove-filters-btn {
