--- a/client/src/css/Prodlists/RelatedList.css
+++ b/client/src/css/Prodlists/RelatedList.css
@@ -69,20 +69,21 @@
 
 
 
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
   .related-list-container{
     /* border: 1px solid rgb(111, 55, 55); */
-    /* display: inline-flex;
-    flex-direction: row;
-    min-width: 375px;
-    height: 361px;
-    justify-content: space-between; */
+    min-width: 360px;
+    height: 540px;
+    width: 360px;
+    justify-content: space-between;
   }
   .related-list-card-container{
-    /* min-width: 341px;
+    min-width: 280px;
+    width: 280px;
     display: inline-flex;
     flex-direction: row;
     justify-content: flex-start;
-    flex-wrap: wrap */
+    flex-wrap: wrap;
+
   }
 }
