More tweaks for responsiveness.

--- a/client/src/css/Reviews/breakdownStyles.css
+++ b/client/src/css/Reviews/breakdownStyles.css
@@ -125,6 +125,7 @@
   margin-left: 22px;
   position: relative;
   transform: scale(.8);
+  transform: translate(75px, -10px);
 }
 
 .remove-filters-btn {
